test/Fail/Issue3932-2.agda
data Unit : Set where
  tt : Unit

f : Unit

mutual
  f = tt
