test/Fail/Issue3932-2.err
Issue3932-2.agda:6.1-7: error: [Syntax.DisallowedInterleavedMutual]
The following names are declared, but not accompanied by a
definition:
- f (at Issue3932-2.agda:4.1-2)
Since 'mutual' blocks can not participate in mutual recursion,
their definition must be given before this point.
